Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11543

Buildbot tests fail with warnings on server shutdown after rpl.rpl_row_mysqlbinlog

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL)
    • 5.5.54
    • Tests, MTR
    • None
    • 5.5.54

    Description

      http://buildbot.askmonty.org/buildbot/builders/labrador/builds/8595/steps/test/logs/stdio

      rpl.rpl_row_mysqlbinlog 'row'            [ pass ]   1672
      worker[1] > Restart [mysqld.1 - pid: 8517, winpid: 8517] - running with different options '--log-bin=master-bin --log-bin=master-bin --binlog-format=row --max_allowed_packet=1024 --net_buffer_length=1024' != '--log-bin=master-bin --binlog-format=row --log-bin=master-bin --max-binlog-size=1040384'
      worker[1] > Restart [mysqld.2 - pid: 8519, winpid: 8519] - running with different options '--log-bin=slave-bin --log-bin=slave-bin --binlog-format=row --max_allowed_packet=1024 --net_buffer_length=1024 --slave_max_allowed_packet=1024' != '--log-bin=slave-bin --binlog-format=row --log-bin=slave-bin'
      ***Warnings generated in error logs during shutdown after running tests: rpl.rpl_row_mysqlbinlog
       
      161211 11:37:51 [Warning] /private/var/lib/buildslave/maria-slave/labrador/build/sql/mysqld: Forcing close of thread 10  user: 'root'
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.